--- a/sat.css
+++ b/sat.css
@@ -1,13 +1,11 @@
 body{
 background-image: url(https://cdn.wallpapersafari.com/96/96/CHE3v5.jpg);
-display: flex;
 justify-content: center;
 align-items:center;
 min-height: 100vh;
-background-position: center;
-background-repeat: no-repeat;
-overflow-x: hidden;
-background-size: cover;
+background-position: relative;
+background-repeat: repeat-y;
+background-size: 100%
 }
 
 .container{
